# serializer version: 1
# name: TestPreviewList.test_early_access_features
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.1
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."repository_cache",
         "insights_integration"."repository_cache_updated_at",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.10
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.11
  '''
  SELECT "insights_earlyaccessfeature"."id",
         "insights_earlyaccessfeature"."team_id",
         "insights_earlyaccessfeature"."feature_flag_id",
         "insights_earlyaccessfeature"."created_by_id",
         "insights_earlyaccessfeature"."name",
         "insights_earlyaccessfeature"."description",
         "insights_earlyaccessfeature"."stage",
         "insights_earlyaccessfeature"."documentation_url",
         "insights_earlyaccessfeature"."payload",
         "insights_earlyaccessfeature"."created_at",
         "insights_earlyaccessfeature"."assigned_user_id",
         "insights_earlyaccessfeature"."assigned_role_id",
         "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "ee_role"."id",
         "ee_role"."name",
         "ee_role"."organization_id",
         "ee_role"."created_at",
         "ee_role"."created_by_id",
         "ee_role"."feature_flags_access_level"
  FROM "insights_earlyaccessfeature"
  INNER JOIN "insights_team" ON ("insights_earlyaccessfeature"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_featureflag" ON ("insights_earlyaccessfeature"."feature_flag_id" = "insights_featureflag"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_earlyaccessfeature"."assigned_user_id" = "insights_user"."id")
  LEFT OUTER JOIN "ee_role" ON ("insights_earlyaccessfeature"."assigned_role_id" = "ee_role"."id")
  WHERE ("insights_earlyaccessfeature"."stage" IN ('beta')
         AND "insights_team"."project_id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features.2
  '''
  SELECT "insights_organizationintegration"."id",
         "insights_organizationintegration"."organization_id",
         "insights_organizationintegration"."kind",
         "insights_organizationintegration"."integration_id",
         "insights_organizationintegration"."config",
         "insights_organizationintegration"."sensitive_config",
         "insights_organizationintegration"."created_by_id",
         "insights_organizationintegration"."created_at",
         "insights_organizationintegration"."updated_at"
  FROM "insights_organizationintegration"
  WHERE ("insights_organizationintegration"."kind" = 'vercel'
         AND "insights_organizationintegration"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.3
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.4
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."repository_cache",
         "insights_integration"."repository_cache_updated_at",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.5
  '''
  SELECT "insights_organizationintegration"."id",
         "insights_organizationintegration"."organization_id",
         "insights_organizationintegration"."kind",
         "insights_organizationintegration"."integration_id",
         "insights_organizationintegration"."config",
         "insights_organizationintegration"."sensitive_config",
         "insights_organizationintegration"."created_by_id",
         "insights_organizationintegration"."created_at",
         "insights_organizationintegration"."updated_at"
  FROM "insights_organizationintegration"
  WHERE ("insights_organizationintegration"."kind" = 'vercel'
         AND "insights_organizationintegration"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.6
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'early_access_feature'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.7
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'early_access_feature'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.8
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features.9
  '''
  SELECT "insights_team"."id" AS "id"
  FROM "insights_team"
  WHERE ("insights_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_team"."receive_org_level_activity_logs")
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.1
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."repository_cache",
         "insights_integration"."repository_cache_updated_at",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.2
  '''
  SELECT "insights_organizationintegration"."id",
         "insights_organizationintegration"."organization_id",
         "insights_organizationintegration"."kind",
         "insights_organizationintegration"."integration_id",
         "insights_organizationintegration"."config",
         "insights_organizationintegration"."sensitive_config",
         "insights_organizationintegration"."created_by_id",
         "insights_organizationintegration"."created_at",
         "insights_organizationintegration"."updated_at"
  FROM "insights_organizationintegration"
  WHERE ("insights_organizationintegration"."kind" = 'vercel'
         AND "insights_organizationintegration"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.3
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'early_access_feature'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.4
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.5
  '''
  SELECT "insights_team"."id" AS "id"
  FROM "insights_team"
  WHERE ("insights_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_team"."receive_org_level_activity_logs")
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.6
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_includes_payload_in_preview.7
  '''
  SELECT "insights_earlyaccessfeature"."id",
         "insights_earlyaccessfeature"."team_id",
         "insights_earlyaccessfeature"."feature_flag_id",
         "insights_earlyaccessfeature"."created_by_id",
         "insights_earlyaccessfeature"."name",
         "insights_earlyaccessfeature"."description",
         "insights_earlyaccessfeature"."stage",
         "insights_earlyaccessfeature"."documentation_url",
         "insights_earlyaccessfeature"."payload",
         "insights_earlyaccessfeature"."created_at",
         "insights_earlyaccessfeature"."assigned_user_id",
         "insights_earlyaccessfeature"."assigned_role_id",
         "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "ee_role"."id",
         "ee_role"."name",
         "ee_role"."organization_id",
         "ee_role"."created_at",
         "ee_role"."created_by_id",
         "ee_role"."feature_flags_access_level"
  FROM "insights_earlyaccessfeature"
  INNER JOIN "insights_team" ON ("insights_earlyaccessfeature"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_featureflag" ON ("insights_earlyaccessfeature"."feature_flag_id" = "insights_featureflag"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_earlyaccessfeature"."assigned_user_id" = "insights_user"."id")
  LEFT OUTER JOIN "ee_role" ON ("insights_earlyaccessfeature"."assigned_role_id" = "ee_role"."id")
  WHERE ("insights_earlyaccessfeature"."stage" IN ('beta')
         AND "insights_team"."project_id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.1
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.2
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."repository_cache",
         "insights_integration"."repository_cache_updated_at",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.3
  '''
  SELECT "insights_organizationintegration"."id",
         "insights_organizationintegration"."organization_id",
         "insights_organizationintegration"."kind",
         "insights_organizationintegration"."integration_id",
         "insights_organizationintegration"."config",
         "insights_organizationintegration"."sensitive_config",
         "insights_organizationintegration"."created_by_id",
         "insights_organizationintegration"."created_at",
         "insights_organizationintegration"."updated_at"
  FROM "insights_organizationintegration"
  WHERE ("insights_organizationintegration"."kind" = 'vercel'
         AND "insights_organizationintegration"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.4
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'early_access_feature'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.5
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.6
  '''
  SELECT "insights_team"."id" AS "id"
  FROM "insights_team"
  WHERE ("insights_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_team"."receive_org_level_activity_logs")
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.7
  '''
  SELECT "insights_earlyaccessfeature"."id",
         "insights_earlyaccessfeature"."team_id",
         "insights_earlyaccessfeature"."feature_flag_id",
         "insights_earlyaccessfeature"."created_by_id",
         "insights_earlyaccessfeature"."name",
         "insights_earlyaccessfeature"."description",
         "insights_earlyaccessfeature"."stage",
         "insights_earlyaccessfeature"."documentation_url",
         "insights_earlyaccessfeature"."payload",
         "insights_earlyaccessfeature"."created_at",
         "insights_earlyaccessfeature"."assigned_user_id",
         "insights_earlyaccessfeature"."assigned_role_id",
         "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "ee_role"."id",
         "ee_role"."name",
         "ee_role"."organization_id",
         "ee_role"."created_at",
         "ee_role"."created_by_id",
         "ee_role"."feature_flags_access_level"
  FROM "insights_earlyaccessfeature"
  INNER JOIN "insights_team" ON ("insights_earlyaccessfeature"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_featureflag" ON ("insights_earlyaccessfeature"."feature_flag_id" = "insights_featureflag"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_earlyaccessfeature"."assigned_user_id" = "insights_user"."id")
  LEFT OUTER JOIN "ee_role" ON ("insights_earlyaccessfeature"."assigned_role_id" = "ee_role"."id")
  WHERE ("insights_earlyaccessfeature"."stage" IN ('beta')
         AND "insights_team"."project_id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.1
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."repository_cache",
         "insights_integration"."repository_cache_updated_at",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.2
  '''
  SELECT "insights_organizationintegration"."id",
         "insights_organizationintegration"."organization_id",
         "insights_organizationintegration"."kind",
         "insights_organizationintegration"."integration_id",
         "insights_organizationintegration"."config",
         "insights_organizationintegration"."sensitive_config",
         "insights_organizationintegration"."created_by_id",
         "insights_organizationintegration"."created_at",
         "insights_organizationintegration"."updated_at"
  FROM "insights_organizationintegration"
  WHERE ("insights_organizationintegration"."kind" = 'vercel'
         AND "insights_organizationintegration"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.3
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."surface",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE (("insights_filesystem"."surface" IS NULL
          OR "insights_filesystem"."surface" = 'web')
         AND "insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'early_access_feature'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.4
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.5
  '''
  SELECT "insights_team"."id" AS "id"
  FROM "insights_team"
  WHERE ("insights_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_team"."receive_org_level_activity_logs")
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.6
  '''
  SELECT "insights_earlyaccessfeature"."id",
         "insights_earlyaccessfeature"."team_id",
         "insights_earlyaccessfeature"."feature_flag_id",
         "insights_earlyaccessfeature"."created_by_id",
         "insights_earlyaccessfeature"."name",
         "insights_earlyaccessfeature"."description",
         "insights_earlyaccessfeature"."stage",
         "insights_earlyaccessfeature"."documentation_url",
         "insights_earlyaccessfeature"."payload",
         "insights_earlyaccessfeature"."created_at",
         "insights_earlyaccessfeature"."assigned_user_id",
         "insights_earlyaccessfeature"."assigned_role_id",
         "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."archived",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "ee_role"."id",
         "ee_role"."name",
         "ee_role"."organization_id",
         "ee_role"."created_at",
         "ee_role"."created_by_id",
         "ee_role"."feature_flags_access_level"
  FROM "insights_earlyaccessfeature"
  INNER JOIN "insights_team" ON ("insights_earlyaccessfeature"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_featureflag" ON ("insights_earlyaccessfeature"."feature_flag_id" = "insights_featureflag"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_earlyaccessfeature"."assigned_user_id" = "insights_user"."id")
  LEFT OUTER JOIN "ee_role" ON ("insights_earlyaccessfeature"."assigned_role_id" = "ee_role"."id")
  WHERE ("insights_earlyaccessfeature"."stage" IN ('beta')
         AND "insights_team"."project_id" = 99999)
  '''
# ---
